@@ -1,6 +1,9 @@
 03/25/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.3.1 'Marshal West':
 	- TCP congestion avoidance completed.
+	- Read and write streams are treated separately in
+	bandwidth control.
+	- Test client fixed.
 
 03/17/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.2.912 'Marshal West':
